<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HW001</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="doclad">Доклад</string>
    <string name="nullText"></string>
    <string name="Text"> вопрос первым</string>
    <string name="effekt_buisness">Эффективный бизнес \nинтернет-магазинов \nв России</string>
    <string name="doklad">Доклад</string>
    <string name="zal_vostok">Зал &quot;Восток&quot;, 10:00 - 11:00</string>
    <string name="artemov">Артёмов \nВасилий Васильевич</string>
    <string name="svaznoi">ООО \"Связной\", г. Москва</string>
    <string name="vopros">В настоящий момент \n вопросов нет. \n Задайте вопрос первым.</string>
    <string name="send_question">Задать вопрос</string>
    <string name="question">Вопрос</string>
    <string name="input_text">Введите текст</string>
</resources>
